started basic layout of site

--- a/index.html
+++ b/index.html
@@ -10,6 +10,42 @@
     <body>
         <header>
             <h1> My Portfolio</h1>
+            <nav>
+                <ul>
+                    <li>About Me</li>
+                    <li>Work</li>
+                    <li>Contact Me</li>
+                    <li>Resume</li>
+                </ul>
+            </nav>
         </header>
+
+        <figure>
+            <p class="content-box">art</p>
+        </figure>
+
+        <!-- About me -->
+        <section>
+            <p class="side-box">about <br>me</br></p>
+            <div class="content-box">
+                skills/exp
+            </div>
+        </section>
+
+        <!-- Work cards -->
+        <section>
+            <p class="side-box">work</p>
+            <div class="content-box">
+                <p>work cards</p>
+            </div>
+        </section>
+
+        <!-- Contact information -->
+        <footer>
+            <p class="side-box">contact <br>me</br></p>
+            <div class="content-box">
+                <p>contact info</p>
+            </div>
+        </footer>
     </body>
 </html>
