Added work card placeholders. Need to correct link functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
         </header>
 
-        <figure>
+        <figure class = "header-img">
             <img src="./assets/img/wip.png" alt="work in progress sign"/>
             <p>art</p>
         </figure>
@@ -43,10 +43,30 @@
         <section class = "container">
             <p id="Work" class="side-box">Work</p>      
             <div class = "content-cards">    
-                <p >work card 1</p>
-                <p >work card 2</p>
-                <p >work card 3</p>
-                <p >work card 4</p>
+
+                <figure class = "card-column"><a href="https://kyleh-git.github.io/horiseon-refactor/" target="_blank"></a>
+                    <h3 class = "card-header"><a href="https://kyleh-git.github.io/horiseon-refactor/" target="_blank">horiseon refactor </a> 
+                       
+                        <p class = "content-subtext"> HTML / CSS</p>
+                    </h2>
+                    work card 1
+                    
+                </figure>
+
+                <figure class = "card-column">
+                    <h3 class = "card-header">placeholder 2</h2>
+                    work card 2
+                </figure>
+
+                <figure class = "card-column">
+                    <h3 class = "card-header">placeholder 3</h2>
+                    work card 3
+                </figure>
+
+                <figure class = "card-column">
+                    <h3 class = "card-header">placeholder 4</h2>
+                    work card 4
+                </figure>
             </div> 
         </section>
 
