cleaned up border boxes; added rounding to nav buttons

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             <h1>My Portfolio</h1>
             <nav class = "navbar">
                 <ul>
-                    <li class = "navbar-item"><a href ="#About Me">About Me</a></li>
-                    <li class = "navbar-item"><a href ="#Work">Work</a></li>
-                    <li class = "navbar-item"><a href ="#Contact Me">Contact Me</a></li>
-                    <li class = "navbar-item"><a href ="#Resume">Resume</a></li>
+                    <a href ="#About Me"><li class = "navbar-item">About Me</li></a>
+                    <a href ="#Work"><li class = "navbar-item">Work</li></a>
+                    <a href ="#Contact Me"><li class = "navbar-item">Contact Me</li></a>
+                    <a href ="#Resume"><li class = "navbar-item">Resume</li></a>
                 </ul>
             </nav>
         </header>
 
         <figure class = "header-img">
-            <img src="./assets/img/wip.png" alt="work in progress sign"/>
+            <!-- <img src="./assets/img/wip.png" alt="work in progress sign"/> -->
             <p>art</p>
         </figure>
 
@@ -43,16 +43,15 @@
         <section class = "container">
             <p id="Work" class="side-box">Work</p>      
             <div class = "content-cards">    
-
-                <figure class = "card-column"><a href="https://kyleh-git.github.io/horiseon-refactor/" target="_blank"></a>
-                    <h3 class = "card-header"><a href="https://kyleh-git.github.io/horiseon-refactor/" target="_blank">horiseon refactor </a> 
-                       
+                <a href="https://kyleh-git.github.io/horiseon-refactor/" target="_blank">
+                <figure class = "card-column">
+                    <h3 class = "card-header">horiseon refactor                     
                         <p class = "content-subtext"> HTML / CSS</p>
                     </h2>
                     work card 1
                     
                 </figure>
-
+            </a>
                 <figure class = "card-column">
                     <h3 class = "card-header">placeholder 2</h2>
                     work card 2
@@ -78,7 +77,7 @@
                     <ul>
                         <li class = "navbar-item">Phone Number</li>
                         <li class = "navbar-item">Email</li>
-                        <li class = "navbar-item">GitHub</li>
+                        <a href="https://github.com/KyleH-Git" target="blank>"<li class = "navbar-item">GitHub</li></a>
                     </ul>
                 </nav>
             </div>
